click sur les cartes invisible, faire un reset de la classe invible lorsqu'il n'y a pas de match.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,36 @@
     <h1>Memory Game</h1>
 
     <div id="game_zone">
-        <img src="img/Bulbizarre.png" alt="">
-        <img src="img/Carapuce.png" alt="">
-        <img src="img/Bulbizarre.png" alt="">
-        <img src="img/Salamèche.png" alt="">
-        <img src="img/Salamèche.png" alt="">
-        <img src="img/Carapuce.png" alt="">
+
+        <div class="card" data-pokemon="bulbizarre">
+            <img src="img/Bulbizarre.png" alt="">
+            <div class="hiding_background"></div>
+        </div>
+        
+        <div class="card" data-pokemon="carapuce">
+            <img src="img/Carapuce.png" alt="">
+            <div class="hiding_background"></div>
+        </div>
+
+        <div class="card" data-pokemon="bulbizarre">
+            <img src="img/Bulbizarre.png" alt="">
+            <div class="hiding_background"></div>
+        </div>
+
+        <div class="card" data-pokemon="salameche">
+            <img src="img/Salamèche.png" alt="">
+            <div class="hiding_background"></div>
+        </div>
+
+        <div class="card" data-pokemon="salameche">
+            <img src="img/Salamèche.png" alt="">
+            <div class="hiding_background"></div>
+        </div>
+
+        <div class="card" data-pokemon="carapuce">
+            <img src="img/Carapuce.png" alt="">
+            <div class="hiding_background"></div>
+        </div>        
     </div>
 </body>
 
